# automl-embedded

./: .ci.yml  .gitignore  .mocharc.yml  .pre-commit-config.yaml  .vscodeignore  NOTICE  README.md  esbuild.js  eslint.config.mjs  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  sbom-cyclonedx.json  tsconfig.json  vite-env.d.ts  vite.config.ts
.devcontainer/automl/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: glossary.md  index.md
docs/assets/templates/: cover_page.tpl  pdf_overrides.css
docs/release-notes/: 0.0.0.md  index.md
docs/user-guide/: about.md  getting-started.md  index.md
docs/user-guide/installation/: docker-install.md  index.md  linux-install.md  vs-code-plugin.install.md
resources/: iconmap.json
resources/configuration/: main.css  main.js
sbom/: sbom-spdx.json
scripts/: convert_to_woff.py
src/: extension.ts  utils.ts
src/configuration/: checkConfig.ts  main.js  messageTypes.ts  viewProvider.ts
src/configuration/resources/: main.module.scss  main.ts
src/kenning/: autoMLScenarioTemplate.ts  openResults.ts  reportsTreeView.ts  runScenario.ts
src/test/: tsconfig.json
src/test/ui-test/: full-automl-run.test.ts
src/test/ui-test-utils/: file-utils.ts
test/: lint.sh  prepare_mock_kzr.sh  ui_test.sh  validate_scenario.py
test/mock_kenning/: pyproject.toml
test/mock_kenning/kenning/: __main__.py
test/mock_kenning/kenning/cli/: cli.py
