[tool.poetry]
name = "spx-developer-docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "spx_developer_docs"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-techdocs-core = "^1.3.3"
setuptools = "^70.0.0"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-redoc-tag = "^0.1.0"
adi-mkdocs-harmonic = "^0.7.0"

[build-system]
requires = "[poetry-core]"
build-backend = "poetry.core.masonry.api"
