[project]
name = "kenning"
version = "0.8.0"
description = "Kenning - a framework for implementing and testing deployment pipelines for deep learning applications on edge devices"
authors = [
    {name = "Antmicro Ltd.", email = "contact@antmicro.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
]

[project.scripts]
kenning = "kenning.cli.cli:main"

[tool.setuptools.package-data]
kenning = ["**/*.yml"]
